--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-image: url('your-background-image.jpg');
+    background-image: url('forest-woods-misty-forest-trees-preview.jpg');
     background-size: cover;
     background-position: center;
 }
